# Redeflusslevel

./: README.md  environment.yml  main.py  pyproject.toml  redeflusslevel_main.py  requirements.txt  slider_tests.py
conda/: environment.yml
src/: main.py
src/subpages/: einstellung.py  infos.py  trend.py
src/subpages/infos_texts/: infob_3_germ.md
subpages/: __init__.py  einstellung.py  infos.py  trend.py
subpages/infos_texts/: infob_1.md  infob_2.md  infob_3.md
trend_save/: .gitkeep  trend.csv
